# rossby

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  LICENSE-APACHE  PUBLISHING.md  README.md  install-hooks.sh
.github/workflows/: ci.yml
doc/: design.md  plan.md
doc/features/: feat-01-dimension-aliases.md  feat-02-querying-by-physical-value-and-raw-index.md  feat-02-timestamp-based-queries.md  feat-03-data-endpoint.md  feat-04-unified-data-endpoint.md
hooks/: README.md  pre-commit
src/: config.rs  data_loader.rs  error.rs  lib.rs  logging.rs  main.rs  state.rs
src/colormaps/: colormap.rs  diverging.rs  geoutil.rs  mod.rs  sequential.rs
src/handlers/: data.rs  heartbeat.rs  image.rs  metadata.rs  mod.rs  point.rs
src/interpolation/: bicubic.rs  bilinear.rs  common.rs  mod.rs  nearest.rs
tests/: integration_test.rs
tests/common/: assertions.rs  http_client.rs  image_utils.rs  mod.rs  test_data.rs
tests/fixtures/: 2m_temperature_1982_5.625deg.nc
