[package]
name = "rossby"
version = "0.1.0"
edition = "2021"
authors = ["rossby contributors"]
description = "A blazingly fast, in-memory, NetCDF-to-API server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mountain/rossby"
keywords = ["netcdf", "api", "server", "scientific-data", "visualization"]
categories = ["science", "web-programming::http-server"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# NetCDF and data handling
netcdf = { version = "0.9", features = ["static"], optional = true }
ndarray = "0.15"

# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image generation
image = "0.24"
colorgrad = "0.6"

# Error handling and utilities
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Additional utilities
once_cell = "1"
parking_lot = "0.12"

[dev-dependencies]
# Testing
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"
pretty_assertions = "1"

[features]
default = ["netcdf"]
netcdf = ["dep:netcdf"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
